content & image changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,9 +25,9 @@
                       <div class="dropdown-menu">
                         <div class="container">
                           <div class="dropdown-menu-full">
-                            <a routerLink="/services/ux-consulting" title="UX Consulting">
+                            <a routerLink="/services/user-experience" title="UX Consulting">
                               <img src="/assets/images/menu/ux-consulting.png" />
-                              <span>UX Consulting</span>
+                              <span>User Experience</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/interface-design" title="Interface Design">
@@ -35,12 +35,12 @@
                               <span>Interface Design</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
-                            <a routerLink="/services/front-end-dev" title="UI Development">
+                            <a routerLink="/services/ui-dev" title="UI Development">
                               <img src="/assets/images/menu/front-end-development.png" />
                               <span>UI Development</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
-                            <a routerLink="/services/back-end-dev" title="End-to-End Development">
+                            <a routerLink="/services/end-to-end" title="End-to-End Development">
                               <img src="/assets/images/menu/back-end-development.png" />
                               <span>End-to-End Development</span>
                             </a>
@@ -109,12 +109,12 @@
             <div class="col-md-6 desktop-only">
                 <ul class="footer-links">
                     <li class="font-weight-bold">Services</li>
-                    <li><a routerLink="/services/ux-consulting">UX Consulting</a></li>
-                    <li><a routerLink="/services/visual-design">Interface Design</a></li>
-                    <li><a routerLink="/services/front-end-dev">UI Development</a></li>
-                    <li><a routerLink="/services/back-end-dev">End-to-End Development</a></li>
+                    <li><a routerLink="/services/user-experience">User Experience</a></li>
+                    <li><a routerLink="/services/interface-design">Interface Design</a></li>
+                    <li><a routerLink="/services/ui-dev">UI Development</a></li>
+                    <li><a routerLink="/services/end-to-end">End-to-End Development</a></li>
                     <li><a routerLink="/services/usability-testing">Usability Testing</a></li>
-                    <li class="font-weight-bold"><a href="http://uxmint.in">UX Training</a></li>
+                    <li><a href="http://uxmint.in">UX Training</a></li>
                   </ul>
             </div>
             <div class="col-md-6 desktop-only">
@@ -140,8 +140,8 @@
     </div>
     <div class="row">
     <ul class="footer-social-links">
-      <li><a href="https://www.linkedin.com/company/uxmint-consulting/" target="_blank"><fa-icon [icon]="['fab','linkedin']" size="2x"></fa-icon></a></li>
-      <li><a href="https://medium.com/uxmint" target="_blank"><fa-icon [icon]="['fab','medium']" size="2x"></fa-icon></a></li>
+      <li><a href="https://www.linkedin.com/company/uxmint-consulting/" target="_blank"><img src="/assets/images/footer/icon-1.svg"></a></li>
+      <li><a href="https://medium.com/uxmint" target="_blank"><img src="/assets/images/footer/icon-2.svg"></a></li>
     </ul>
   </div>
     <div class="row">
