--- a/src/app/components/blog/blog.component.scss
+++ b/src/app/components/blog/blog.component.scss
@@ -58,6 +58,7 @@
             font-size: 20px;
             font-family: 'Roboto';
             color: #1ED69F;
+            padding: 0;
         }
         .post-detail{
             padding-left: 30px;
