--- a/src/app/components/projects/car-usability-testing/car-usability-testing.component.html
+++ b/src/app/components/projects/car-usability-testing/car-usability-testing.component.html
@@ -81,11 +81,11 @@
         adults, parents and elderly.
       </p>
       <div class="types">
-        <p>Environmental</p>
-        <p>Emotional</p>
-        <p>Intellectual</p>
-        <p>Ergonomical</p>
-        <p>Senses</p>
+        <p>- Environmental</p>
+        <p>- Emotional</p>
+        <p>- Intellectual</p>
+        <p>- Ergonomical</p>
+        <p>- Senses</p>
       </div>
     </div>
     </div>
