--- a/src/app/components/projects/child-care/child-care.component.html
+++ b/src/app/components/projects/child-care/child-care.component.html
@@ -63,18 +63,18 @@
     </div>
     <div class="row">
       <div class="col-md-5">
-        <p>Easy login with facial recognition<br>
-        Simple and Enjoyable interactive games for learning<br>
-        Bonding with the sponsor<br>
-        Different solutions for diffent age band<br>
-        Remote data loading to allow usage even in regions of no network connectivity</p>
+        <p>- Easy login with facial recognition</p>
+        <p>- Simple and Enjoyable interactive games for learning</p>
+        <p>- Bonding with the sponsor</p>
+        <p>- Different solutions for diffent age band</p>
+        <p>- Remote data loading to allow usage even in regions of no network connectivity</p>
       </div>
       <div class="col-md-1"></div>
       <div class="col-md-5">
         <p>Our solutions were to enable children using the app intrinsic motivation and without any difficulties 
         </p>
         <div class="image2">
-          <img src="/assets/images/projects/child-care/solution.png" alt=" "/>
+          <img src="/assets/images/projects/project8.png" alt=" "/>
         </div>
       </div>
     </div>
@@ -94,16 +94,16 @@
             <div class="step-image" routerLink="/projects/health-care">
               <img src="/assets/images/projects/project9.png" alt="Case Study"/>
               <div class="text-hover">
-                  <h4>Health Care Portal</h4>
+                  <h4>Health Care System</h4>
                   <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
               </div>
           </div>
         </div>
           <div class="col-md-4">
-            <div class="step-image" routerLink="/projects/car-usability">
+            <div class="step-image" routerLink="/projects/automobile-usability">
               <img src="/assets/images/projects/project10.png" alt="Case Study"/>
               <div class="text-hover">
-                  <h4>Usability Testing</h4>
+                  <h4>Automobile Usability</h4>
                   <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
               </div>
           </div>
