--- a/src/app/components/projects/construction-portal/construction-portal.component.html
+++ b/src/app/components/projects/construction-portal/construction-portal.component.html
@@ -61,11 +61,11 @@
         <h1>CHALLENGES</h1>
       </div>
       <div class="col-md-6">
-        <p>Preparing proposal presentation for every pitch</p>
-        <p>Searching previous project details from huge repository</p>
-        <p>Multiple version of presentations</p>
-        <p>Access to required data spontaneously</p>
-        <p>Interpretation of humongous numeric data</p>
+        <p>- Preparing proposal presentation for every pitch</p>
+        <p>- Searching previous project details from huge repository</p>
+        <p>- Multiple version of presentations</p>
+        <p>- Access to required data spontaneously</p>
+        <p>- Interpretation of humongous numeric data</p>
         </div>
         <div class="col-md-1"></div>
       </div>
@@ -151,7 +151,7 @@
     <div class="other-works-body">
         <div class="row space">
             <div class="col-md-4">
-              <div class="step-image" routerLink="/projects/web-development">
+              <div class="step-image" routerLink="/projects/marketing">
                 <img src="/assets/images/projects/project7.png" alt="Case Study"/>
                 <div class="text-hover">
                     <h4>Website for startup</h4>
@@ -163,7 +163,7 @@
             <div class="step-image" routerLink="/projects/child-care">
               <img src="/assets/images/projects/project8.png" alt="Case Study"/>
               <div class="text-hover">
-                  <h4>Child Care</h4>
+                  <h4>Child Care Portal</h4>
                   <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
               </div>
           </div>
@@ -172,7 +172,7 @@
             <div class="step-image" routerLink="/projects/health-care">
               <img src="/assets/images/projects/project9.png" alt="Case Study"/>
               <div class="text-hover">
-                  <h4>Health Care Portal</h4>
+                  <h4>Health Care System</h4>
                   <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
               </div>
           </div>
