--- a/src/app/components/projects/event-management/event-management.component.html
+++ b/src/app/components/projects/event-management/event-management.component.html
@@ -63,7 +63,7 @@
       <div class="row">
         <div class="col-sm-3">
           <div class="step-image1">
-            <img src="/assets/images/projects/event-management/Group 3419.png" alt="Event Management"/>
+            <img src="/assets/images/projects/event-management/Group-1.png" alt="Event Management"/>
         </div>
         <h6>Discover</h6>
         <p>- Background Research</p>
@@ -73,7 +73,7 @@
         <div class = "vertical1"></div> 
         <div class="col-sm-3">
           <div class="step-image1">
-            <img src="/assets/images/projects/event-management/Group 3418.png" alt="Event Management"/>
+            <img src="/assets/images/projects/event-management/Group-2.png" alt="Event Management"/>
         </div>
         <h6>Define</h6>
         <p>- Personas</p>
@@ -84,7 +84,7 @@
         <div class = "vertical2"></div> 
         <div class="col-sm-3">
           <div class="step-image1">
-            <img src="/assets/images/projects/event-management/Group 3417.png" alt="Event Management"/>
+            <img src="/assets/images/projects/event-management/Group-3.png" alt="Event Management"/>
         </div>
         <h6>Design</h6>
         <p>- Feature Mapping</p>
@@ -95,7 +95,7 @@
         <div class = "vertical3"></div> 
         <div class="col-sm-3">
           <div class="step-image1">
-            <img src="/assets/images/projects/event-management/Group 3416.png" alt="Event Management"/>
+            <img src="/assets/images/projects/event-management/Group-4.png" alt="Event Management"/>
         </div>
         <h6>Interface</h6>
         <p>- Design Systems</p>
@@ -174,20 +174,20 @@
       <div class="row">
           <div class="col-md-6">
              <h2> <img src="/assets/images/projects/event-management/em8.png" />Challenges</h2>
-             <p>Decidophobia, Dilemma of selecting an option</p>
-              <p>Not having a clarity on the cost of the service</p>
-              <p>How skilled is this service provider?</p>
-              <p>How many events have they done in past?</p>
-              <p>What is the track record of this service provider?</p>
-              <p>How to get in touch with the right service provider?</p>
+             <p>- Decidophobia, Dilemma of selecting an option</p>
+              <p>- Not having a clarity on the cost of the service</p>
+              <p>- How skilled is this service provider?</p>
+              <p>- How many events have they done in past?</p>
+              <p>- What is the track record of this service provider?</p>
+              <p>- How to get in touch with the right service provider?</p>
           </div>
           <div class="col-md-6">
             <h2> <img src="/assets/images/projects/event-management/em8.png" />Needs</h2>
-            <p>Shortlisted set of services that match your budget and spl. occasion</p>
-            <p>Break down of the total cost for the service</p>
-            <p> Similar works, Testimonials, Videos</p>
-            <p>Team members, Portfolio </p>
-            <p>Contact inline, Request call via phone</p>
+            <p>- Shortlisted set of services that match your budget and spl. occasion</p>
+            <p>- Break down of the total cost for the service</p>
+            <p>- Similar works, Testimonials, Videos</p>
+            <p>- Team members, Portfolio </p>
+            <p>- Contact inline, Request call via phone</p>
           </div>
       </div>
       </div>
@@ -201,7 +201,7 @@
         </div>
         <div class="row">
           <div class="col-md-3">
-            <h5>Featue Mapping</h5>
+            <h5>Feature Mapping</h5>
             <p>After finding major problems in
               Root Cause Analysis, Solutioning
               process is done for all the key
@@ -273,7 +273,7 @@
         </div>
       </div>
     </div>
-    <div class="layout9">
+    <!-- <div class="layout9">
       <div class="container">
         <div class="row">
           <div class="col-md-5">
@@ -290,7 +290,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="layout10">
         <div class="row">
           <div class="col-md-4">
