--- a/src/app/components/projects/marketing/marketing.component.html
+++ b/src/app/components/projects/marketing/marketing.component.html
@@ -224,7 +224,7 @@
                     <div class="step-image" routerLink="/projects/child-care">
                         <img src="/assets/images/projects/project8.png" alt="Case Study"/>
                         <div class="text-hover">
-                            <h4>Child Care</h4>
+                            <h4>Child Care Portal</h4>
                             <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
                         </div>
                     </div>
@@ -233,16 +233,16 @@
                 <div class="step-image" routerLink="/projects/health-care">
                     <img src="/assets/images/projects/project9.png" alt="Case Study"/>
                     <div class="text-hover">
-                        <h4>Health Care Portal</h4>
+                        <h4>Health Care System</h4>
                         <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
                     </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="step-image" routerLink="/projects/car-usability">
+                <div class="step-image" routerLink="/projects/automobile-usability">
                     <img src="/assets/images/projects/project10.png" alt="Case Study"/>
                     <div class="text-hover">
-                        <h4>Usability Testing</h4>
+                        <h4>Automobile Usability</h4>
                         <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
                     </div>
                 </div>
