--- a/src/app/components/projects/marketing/marketing.component.scss
+++ b/src/app/components/projects/marketing/marketing.component.scss
@@ -245,6 +245,11 @@
     .pic1,.pic2,.pic3,.pic4,.pic5,.pic6{
         margin-left: 60px;
 }
+img{
+    padding-bottom: 60px;
+    width: 70%;
+    height: auto;
+    }
 }
 }
 
