--- a/src/app/components/projects/networking/networking.component.html
+++ b/src/app/components/projects/networking/networking.component.html
@@ -4,7 +4,7 @@
             <div class="row">
               <div class="col-md-5">
                 <h2>Network</h2>
-                <h5>Management</h5>
+                <h5>Scalability</h5>
                 <p>Digital Transformation for India's largest telecom network service provider involved redesigning 
                   the experience for customers, SMEs and business users. It involved breaking down complex manual process 
                   of quote, billing & invoicing that spanned across multiple platforms and CRM systems with high level of 
@@ -44,10 +44,10 @@
                   <img src="/assets/images/projects/networking/nm2.png" alt="Network Management"/>
               </div>
               <h6>Discover</h6>
-              <p>Stakeholder Interview</p>
-              <p>Background Study</p>
-              <p>User Research</p>
-              <p>Competitor Analysis</p>
+              <p>- Stakeholder Interview</p>
+              <p>- Background Study</p>
+              <p>- User Research</p>
+              <p>- Competitor Analysis</p>
               </div>
               <div class = "vertical1"></div> 
               <div class="col-sm-3">
@@ -55,10 +55,10 @@
                   <img src="/assets/images/projects/networking/nm3.png" alt="Network Management"/>
               </div>
               <h6>Define</h6>
-              <p>Personas</p>
-              <p>Journey Map</p>
-              <p>Emotional Web</p>
-              <p>Strategy Design</p>
+              <p>- Personas</p>
+              <p>- Journey Map</p>
+              <p>- Emotional Web</p>
+              <p>- Strategy Design</p>
               </div>
               <div class = "vertical2"></div> 
               <div class="col-sm-3">
@@ -66,11 +66,11 @@
                   <img src="/assets/images/projects/networking/nm4.png" alt="Network Management"/>
               </div>
               <h6>Design</h6>
-              <p>Task Prioritisation</p>
-              <p>Information Architecture</p>
-              <p>Feature Mapping</p>
-              <p>Wireframe</p>
-              <p>Interface Design</p>
+              <p>- Task Prioritisation</p>
+              <p>- Information Architecture</p>
+              <p>- Feature Mapping</p>
+              <p>- Wireframe</p>
+              <p>- Interface Design</p>
               </div>
               <div class = "vertical3"></div> 
               <div class="col-sm-3">
@@ -78,8 +78,8 @@
                   <img src="/assets/images/projects/networking/nm5.png" alt="Network Management"/>
               </div>
               <h6>Iterate</h6>
-              <p>Usability Testing</p>
-              <p>Refine</p>
+              <p>- Usability Testing</p>
+              <p>- Refine</p>
               </div>
             </div>
             <div class="row  research">
@@ -213,19 +213,19 @@
               <div class="col-md-6">
                 <h2> <img src="/assets/images/projects/networking/nm10.png" />Challenges</h2>
                 <p></p>
-                <p>Heavy dependency on Support Team</p>
-                <p>Delay in communication</p>
-                <p>Outstanding customer payments</p>
-                <p>Avoiding cheque payments</p>
-                <p>Multiple follow-ups to customers on purchase and billing</p>
+                <p>- Heavy dependency on Support Team</p>
+                <p>- Delay in communication</p>
+                <p>- Outstanding customer payments</p>
+                <p>- Avoiding cheque payments</p>
+                <p>- Multiple follow-ups to customers on purchase and billing</p>
               </div>
               <div class="col-md-6">
                 <h2> <img src="/assets/images/projects/networking/nm10.png" />Needs</h2>
-                <p>Promoting online and on-time payment of invoices</p>
-                <p>Converting existing offline users to online process</p>
-                <p>Reducing the manual intervention</p>
-                <p>Avoiding delays in status intimation</p>
-                <p>Improving customer retention</p>
+                <p>- Promoting online and on-time payment of invoices</p>
+                <p>- Converting existing offline users to online process</p>
+                <p>- Reducing the manual intervention</p>
+                <p>- Avoiding delays in status intimation</p>
+                <p>- Improving customer retention</p>
                  
               </div>
             </div>
@@ -310,17 +310,14 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-4">
-                <h5>Onboarding</h5>
-              </div>
-              <div class="col-md-3">
+              <div class="col-md-5">
                 <h5>Challenges</h5>
                 <p>User has to fill up the lengthy sign up the
                   form manually User drop rate was high
                   (Google Analytics)</p>
               </div>
               <div class="col-md-1"></div>
-              <div class="col-md-3">
+              <div class="col-md-5">
                 <h5>Solution</h5>
                 <p>Guided sign-up process and simplified data entry</p>
               </div>
