--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -67,7 +67,7 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <div class="step-image" routerLink="/projects/web-development">
+                <div class="step-image" routerLink="/projects/marketing">
                     <img src="/assets/images/projects/project7.png" alt="Case Study"/>
                     <div class="text-hover">
                         <h4>Website for startup</h4>
@@ -79,7 +79,7 @@
                 <div class="step-image" routerLink="/projects/child-care">
                     <img src="/assets/images/projects/project8.png" alt="Case Study"/>
                     <div class="text-hover">
-                        <h4>Child Care</h4>
+                        <h4>Child Care Portal</h4>
                         <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                 <div class="step-image" routerLink="/projects/health-care">
                     <img src="/assets/images/projects/project9.png" alt="Case Study"/>
                     <div class="text-hover">
-                        <h4>Health Care Portal</h4>
+                        <h4>Health Care System</h4>
                         <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
                     </div>
                 </div>
@@ -96,10 +96,10 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <div class="step-image" routerLink="/projects/car-usability">
+                <div class="step-image" routerLink="/projects/automobile-usability">
                     <img src="/assets/images/projects/project10.png" alt="Case Study"/>
                     <div class="text-hover">
-                        <h4>Usability Testing</h4>
+                        <h4>Automobile Usability</h4>
                         <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
                     </div>
                 </div>
