--- a/src/app/components/projects/skill-development/skill-development.component.html
+++ b/src/app/components/projects/skill-development/skill-development.component.html
@@ -159,8 +159,8 @@
       <div class="col-md-6">
         <div class="set-list">
       <div class="set"><img src="/assets/images/projects/event-management/Ellipse 560.png"/><span class="profile"><img src="/assets/images/projects/event-management/em5.png"/></span><span class="highlights">50</span><span class="highlights1">Career Seekers</span></div><hr>
-      <div class="set"><img src="/assets/images/projects/event-management/Ellipse 561.png"/><span class="profile"><img src="/assets/images/projects/event-management/em6.png"/></span><span class="highlights">8</span><span class="highlights1">Easy Goers</span></div><hr>
-      <div class="set"><img src="/assets/images/projects/event-management/Ellipse 562.png"/><span class="profile"><img src="/assets/images/projects/event-management/em7.png"/></span><span class="highlights">9</span><span class="highlights1">The Upgraders</span></div>
+      <div class="set"><img src="/assets/images/projects/event-management/Ellipse 561.png"/><span class="profile"><img src="/assets/images/projects/event-management/em6.png"/></span><span class="highlights">25</span><span class="highlights1">Easy Goers</span></div><hr>
+      <div class="set"><img src="/assets/images/projects/event-management/Ellipse 562.png"/><span class="profile"><img src="/assets/images/projects/event-management/em7.png"/></span><span class="highlights">25</span><span class="highlights1">The Upgraders</span></div>
     </div>
   </div>
   </div>
@@ -182,19 +182,19 @@
     <div class="row">
       <div class="col-md-6">
         <h3>Challenges</h3>
-        <p>Scope of the awareness in field is less</p>
-        <p>No formal education in design</p>
-        <p>Don't have a portfolio to enter the domain</p>
-        <p>Difficult to do portfolio as no references</p>
-        <p>No Guidance to enhance the Portfolio</p>
+        <p>- Scope of the awareness in field is less</p>
+        <p>- No formal education in design</p>
+        <p>- Don't have a portfolio to enter the domain</p>
+        <p>- Difficult to do portfolio as no references</p>
+        <p>- No Guidance to enhance the Portfolio</p>
       </div>
       <div class="col-md-6">
         <h3>Needs</h3>
-        <p>Create awareness among younger generation on Creative Job</p>
-        <p>Understand how the field works</p>
-        <p>Need a mentor to Guide</p>
-        <p>Portfolio review by experts</p>
-        <p>Current trends and new methods to debate with Industry Vetrans</p>
+        <p>- Create awareness among younger generation on Creative Job</p>
+        <p>- Understand how the field works</p>
+        <p>- Need a mentor to Guide</p>
+        <p>- Portfolio review by experts</p>
+        <p>- Current trends and new methods to debate with Industry Vetrans</p>
       </div>
     </div>
   </div>
@@ -274,20 +274,20 @@
   <div class="container">
     <h1>App</h1>
     <div class="app-image step-image">
-      <img src="/assets/images/projects/skill-development/app.png" />
+      <img src="/assets/images/projects/skill-development/image1.png" />
     </div>
   </div>
 </section>
 <!-- App -->
 
 <!-- Image -->
-<section class="image">
+<!-- <section class="image">
   <div class="container">
     <div class="image1 step-image">
       <img src="/assets/images/projects/skill-development/image1.png" />
     </div>
   </div>
-</section>
+</section> -->
 <!-- Image -->
 
     <!-- Web view -->
