--- a/src/app/components/projects/social-review/social-review.component.html
+++ b/src/app/components/projects/social-review/social-review.component.html
@@ -4,8 +4,8 @@
     <div class="row">
       <div class="col-md-6">
         <div class="heading">
-            <h1>Social Review</h1>
-            <h3>Management</h3>
+            <h1>Social Marketing</h1>
+            <!-- <h3>Management</h3> -->
             <p>The SaaS product for Customer Advocacy platform to promoting word of mouth review for
               sustainable growth and to increase credibility.
             </p>
@@ -61,35 +61,35 @@
             <img src="/assets/images/projects/social-review/icon1.png" />
         </div>
         <h6>Discover</h6>
-        <p>Stakeholder Interview</p>
-        <p>Background Study</p>
-        <p>User Research</p>
+        <p>- Stakeholder Interview</p>
+        <p>- Background Study</p>
+        <p>- User Research</p>
         </div> 
         <div class="col-sm-3">
           <div class="step-image1">
             <img src="/assets/images/projects/social-review//icon2.png" />
         </div>
         <h6>Define</h6>
-        <p>Personas</p>
-        <p>Journey map</p>
-        <p>Conceptual Model</p>
+        <p>- Personas</p>
+        <p>- Journey map</p>
+        <p>- Conceptual Model</p>
         </div> 
         <div class="col-sm-3">
           <div class="step-image1">
             <img src="/assets/images/projects/social-review//icon3.png" />
         </div>
         <h6>Design</h6>
-        <p>Information Architecture</p>
-        <p>Wireframe</p>
-        <p>Interface Design</p>
+        <p>- Information Architecture</p>
+        <p>- Wireframe</p>
+        <p>- Interface Design</p>
         </div>
         <div class="col-sm-3">
           <div class="step-image1">
             <img src="/assets/images/projects/social-review//icon4.png" />
         </div>
         <h6>Evaluate</h6>
-        <p>Usability Testing</p>
-        <p>Iteration</p>
+        <p>- Usability Testing</p>
+        <p>- Iteration</p>
         </div>
       </div>
     </div>
@@ -101,7 +101,7 @@
       <div class="container">
           <h1>Research</h1>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-6">
             <h3>Discovery and Analysis</h3>
             <p>We started noticing a pattern among the users interviews we conducted. Every user persona 
               had its own Frustrations, Challenges, Breaking points, etc,. All of which had to be addressed in
@@ -111,17 +111,13 @@
               promoting Product/services organically instead of doing it online.
             </p>
           </div>
-          <div class="col-md-8">
-            <h3>Goal</h3>
-            <div class="row">
           <div class="col-md-6">
+            <h3>Goal</h3>
             <p>Our Primary objective is to resurrect idea of "Word of Mouth" in the Cyber Social Era 
               by merging with the concept of Consumer Advocacy which enables endless possibilities</p>
               <p>Also why certain people prefer to do it online and not in person. We also conducted N 
                 number User Interviews where we understood who the users were, which helped us understand 
                 why they are</p>
-          </div>
-        </div>
         </div>
         </div>
       </div>
@@ -135,21 +131,21 @@
       <div class="col-md-3"></div>
       <div class="col-md-3">
         <h3>Challenges</h3>
-        <p>Getting Testimonials</p>
-        <p>Scattered Management</p>
-        <p>Manual Work</p>
-        <p>Losing Track of Customers</p>
-        <p>Feedback Mechanism</p>
+        <p>- Getting Testimonials</p>
+        <p>- Scattered Management</p>
+        <p>- Manual Work</p>
+        <p>- Losing Track of Customers</p>
+        <p>- Feedback Mechanism</p>
       </div>
       <div class="col-md-3">
         <h3>Needs</h3>
-        <p>Fast and Simple Design</p>
-        <p>Track Activity and Daily Tasks</p>
-        <p>Motivation & Appreciation</p>
-        <p>Reliable Platform</p>
-        <p>Interactive environment</p>
-        <p>Getting Testimonials</p>
-        <p>Social Status</p>
+        <p>- Fast and Simple Design</p>
+        <p>- Track Activity and Daily Tasks</p>
+        <p>- Motivation & Appreciation</p>
+        <p>- Reliable Platform</p>
+        <p>- Interactive environment</p>
+        <p>- Getting Testimonials</p>
+        <p>- Social Status</p>
       </div>
       <div class="col-md-3"></div>
     </div>
@@ -259,7 +255,7 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="step-image" routerLink="/projects/web-development">
+      <div class="step-image" routerLink="/projects/marketing">
           <img src="/assets/images/projects/project7.png" alt="Case Study"/>
           <div class="text-hover">
               <h4>Website for startup</h4>
