--- a/src/app/components/projects/web-development/web-development.component.html
+++ b/src/app/components/projects/web-development/web-development.component.html
@@ -72,7 +72,6 @@
      <p>Angular, Google Charts, Java (Spring Boot) were the frameworks used since this application required scalability and 
        future enhancements to portable devices.
      </p>
-     <h3>Framework we use</h3>
         <div class="row">
             <ul class="list-icons">
                 <li>
@@ -83,7 +82,7 @@
                 </li>
                 <li>
                     <div class="step-image1">
-                        <img src="/assets/images/services/fdicon7.png" alt="" />
+                        <img src="/assets/images/services/Group 5221.png" alt="" />
                         <p>Google Charts</p>
                     </div>
                 </li><li>
