--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -3,7 +3,7 @@
         <div class="searvice-jumbotron-inner">
             <div class="row">
                 <div class="col-md-5">
-                    <h5><span class="highlight"> Front-End</span> Development</h5>
+                    <h5><span class="highlight"> UI</span> Development</h5>
                     <p>The design comes to life when the robust technologies are put in place to experience the best</p>
                         <h3><img src="/assets/images/services/Group 2858.png" alt="" /><span class="list1">Business Understanding</span></h3>
                         <h3><img src="/assets/images/services/Group 2859.png" alt="" /><span class="list2">Platform</span></h3>
@@ -172,12 +172,12 @@
         <div class="service-body">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="service" routerLink="/services/ux-consulting">
+                    <div class="service" routerLink="/services/user-experience">
                       <div class="service-icon">
                           <img src="/assets/images/services/Group 2790.png" alt="UX consulting"/>
                           <img src="/assets/images/services/Group 3368.png" alt="UX consulting"/>
                       </div>
-                      <h4>UX Consulting</h4>
+                      <h4>User Experience</h4>
                       <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
                       <a class="btn">Show More</a>
                     </div>
@@ -194,12 +194,12 @@
                   </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="service" routerLink="/services/front-end-dev">
+                    <div class="service" routerLink="/services/end-to-end">
                         <div class="service-icon">
                           <img src="/assets/images/services/Group 2750.png" alt="End-to-End Development"/>
                           <img src="/assets/images/services/Group 3372.png" alt="End-to-End Development"/>
                         </div>
-                        <h4>Back End Development</h4>
+                        <h4>End-to-End Development</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
                         <a class="btn">Show More</a>
                       </div>
