--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -184,24 +184,24 @@
         <div class="service-body">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="service">
-                        <div class="service-icon" routerLink="/services/front-end-dev">
-                          <img src="/assets/images/services/Group 2746.png" alt="Front End Dev" />
-                          <img src="/assets/images/services/Group 3371.png" alt="Front End Dev" /> 
+                    <div class="service" routerLink="/services/ui-dev">
+                        <div class="service-icon">
+                          <img src="/assets/images/services/Group 2746.png" alt="UI Development" />
+                          <img src="/assets/images/services/Group 3371.png" alt="UI Development" /> 
                         </div>
-                        <h4>Front End Development</h4>
+                        <h4>UI Development</h4>
                         <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
-                          execute it pixel perfect</p>
+                          execute it pixel perfect.</p>
                         <a class="btn">Show More</a>
                       </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="service" routerLink="/services/back-end-dev">
+                    <div class="service" routerLink="/services/end-to-end">
                         <div class="service-icon">
                           <img src="/assets/images/services/Group 2750.png" alt="End-to-End Development"/>
                           <img src="/assets/images/services/Group 3372.png" alt="End-to-End Development"/>
                         </div>
-                        <h4>Back End Development</h4>
+                        <h4>End-to-End Development</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
                         <a class="btn">Show More</a>
                       </div>
