--- a/src/app/components/services/visual-design/visual-design.component.scss
+++ b/src/app/components/services/visual-design/visual-design.component.scss
@@ -296,7 +296,7 @@
         }
         .step-image img{
             width: 100%;
-            height: 350px;
+            height: auto;
         }
     }
     .service-step1{
