--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -50,12 +50,12 @@
       <div class="service-body">
         <div class="row">
           <div class="col-md-4">
-              <div class="service" routerLink="/services/ux-consulting">
+              <div class="service" routerLink="/services/user-experience">
                 <div class="service-icon">
                     <img src="/assets/images/services/Group 2790.png" alt="UX Consulting"/>
                     <img src="/assets/images/services/Group 3368.png" alt="UX Consulting"/>
                 </div>
-                <h4>UX Consulting</h4>
+                <h4>User Experience</h4>
                 <p>We believe research brings insights, our consultants connect with your business and end-users to build a better solutions to drive the business.</p>
                 <a class="btn">Show More</a>
               </div>
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="col-md-4">
-          <div class="service" routerLink="/services/front-end-dev">
+          <div class="service" routerLink="/services/ui-dev">
             <div class="service-icon">
               <img src="/assets/images/services/Group 2746.png" alt="UI Development" />
               <img src="/assets/images/services/Group 3371.png" alt="UI Development" /> 
@@ -86,7 +86,7 @@
         </div>
         <div class="row">
            <div class="col-md-4">
-                <div class="service" routerLink="/services/back-end-dev">
+                <div class="service" routerLink="/services/end-to-end">
                   <div class="service-icon">
                     <img src="/assets/images/services/Group 2750.png" alt="End-to-End Development"/>
                     <img src="/assets/images/services/Group 3372.png" alt="End-to-End Development"/>
@@ -107,7 +107,8 @@
               <a class="btn">Show More</a>
             </div>
       </div>
-          <div class="col-md-4">
+          <div class="col-md-4 redirect">
+            <a href="https://uxmint.in/">
               <div class="service">
                 <div class="service-icon">
                   <img src="/assets/images/services/Group 2770.png" alt="Training"/>
@@ -115,8 +116,8 @@
                 </div>
                 <h4>UX Training</h4>
                 <p>Transform your workforce with cheery picked courses making them business focused and future ready.</p>
-                <a href="https://uxmint.in/" class="btn">Show More</a>
-              </div>
+                <a class="btn">Show More</a>
+              </div> </a>
           </div>
         </div>
       </div>
