--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -176,6 +176,11 @@ section.home-carousel{
     }
 }
 
+.redirect{
+    a{
+        text-decoration: none;
+    }
+}
 
 @include media-breakpoint-down(sm) {
     .section{
