--- a/src/app/components/projects/health-care/health-care.component.html
+++ b/src/app/components/projects/health-care/health-care.component.html
@@ -133,7 +133,7 @@
 <section class="web-image">
   <div class="container">
     <div class="web">
-       <img src="/assets/images/projects/web-development/web-dev.png" alt="UX consulting"/>
+       <img src="/assets/images/projects/health-care/web-dev.png" alt="UX consulting"/>
     </div>
   </div>
 </section>
@@ -148,10 +148,10 @@
     <div class="other-works-body">
         <div class="row space">
             <div class="col-md-4">
-              <div class="step-image" routerLink="/projects/car-usability">
+              <div class="step-image" routerLink="/projects/automobile-usability">
                 <img src="/assets/images/projects/project10.png" alt="Case Study"/>
                 <div class="text-hover">
-                    <h4>Usability Testing</h4>
+                    <h4>Automobile Usability</h4>
                     <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
                 </div>
             </div>
