--- a/src/app/components/projects/health/health.component.html
+++ b/src/app/components/projects/health/health.component.html
@@ -142,7 +142,7 @@
             <li><img src="/assets/images/projects/health/inorg-user.png" /></li>
             <li><img src="/assets/images/projects/health/home-maker.png" /></li>
             <li><img src="/assets/images/projects/health/env-friendly.png" /></li>
-            <li><img src="/assets/images/projects/health/csa-member.png" /></li>
+            <li><img src="/assets/images/projects/health/member.png" /></li>
           </ul>
       </div>
       <div class="col-md-1"></div>
@@ -160,19 +160,19 @@
     <div class="row">
       <div class="col-md-6">
         <h3>Challenges</h3>
-        <p>Planning a list of buying product</p>
-        <p>Identifying the right and trust worthy shop</p>
-        <p>Don't have knowledge about how much quantity to buy for family</p>
-        <p>Need another person's help to while buying products</p>
-        <p>People forgot to at least one product in their list</p>
+        <p>- Planning a list of buying product</p>
+        <p>- Identifying the right and trust worthy shop</p>
+        <p>- Don't have knowledge about how much quantity to buy for family</p>
+        <p>- Need another person's help to while buying products</p>
+        <p>- People forgot to at least one product in their list</p>
       </div>
       <div class="col-md-6">
         <h3>Needs</h3>
-        <p>Weekly pre-planned vegetable + groceries list for the whole family</p>
-        <p>A place to buy goods in fast and easy way</p>
-        <p>A Food Chart to avoid "daily new recipe" confusion</p>
-        <p>Health benefits of the Goods and Recipes</p>
-        <p>Recipe suggestions based on Taste, Quality, Time, Health</p>
+        <p>- Weekly pre-planned vegetable + groceries list for the whole family</p>
+        <p>- A place to buy goods in fast and easy way</p>
+        <p>- A Food Chart to avoid "daily new recipe" confusion</p>
+        <p>- Health benefits of the Goods and Recipes</p>
+        <p>- Recipe suggestions based on Taste, Quality, Time, Health</p>
       </div>
     </div>
   </div>
@@ -231,7 +231,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="step-image" routerLink="/projects/web-development">
+            <div class="step-image" routerLink="/projects/marketing">
               <img src="/assets/images/projects/project7.png" alt="Case Study"/>
               <div class="text-hover">
                   <h4>Website for startup</h4>
@@ -243,7 +243,7 @@
           <div class="step-image" routerLink="/projects/child-care">
             <img src="/assets/images/projects/project8.png" alt="Case Study"/>
             <div class="text-hover">
-                <h4>Child Care</h4>
+                <h4>Child Care Portal</h4>
                 <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
             </div>
         </div>
