--- a/src/app/components/projects/health/health.component.scss
+++ b/src/app/components/projects/health/health.component.scss
@@ -107,7 +107,7 @@
 
 /* Process */
 .process{
-    background-image: url('/assets/images/projects/health/process.png');
+    //background-image: url('/assets/images/projects/health/process.png');
     padding-top: 50px;
     padding-bottom: 50px;
     h1{
@@ -175,7 +175,7 @@
         font-family: 'Roboto', sans-serif;
         font-size: 16px;
         font-weight: 400;
-        text-align: justify;
+        text-align: left;
     }
 }
     .research2{
