--- a/src/app/components/projects/networking/networking.component.scss
+++ b/src/app/components/projects/networking/networking.component.scss
@@ -86,6 +86,7 @@
             font-weight: 100;
             margin-top: 70px;
             text-align: justify;
+            padding-right: 30px;
         }
         h6{
             font-size: 16px;
@@ -116,6 +117,7 @@
         font-size: 13px;
         margin-top: 0px;
         line-height: 25px;
+        padding-right: 0px;
     }
     h6{
         font-size: 13px;
@@ -179,8 +181,9 @@
             line-height: 20px;
         }
         .col-sm-3{
-            width: 40%;
-            padding-left: 35px;
+            //width: 40%;
+            padding-left: 40px;
+            padding-bottom: 20px;
         }
         }
 }
@@ -232,6 +235,12 @@
             color: #ffffff;
             margin-bottom: 20px;
         }
+        p{
+            font-size: 16px;
+            color: #ffffff;
+            font-weight: 100;
+            text-align: left;
+        }
 }
 
 @include media-breakpoint-down(md) {
@@ -241,6 +250,9 @@
             font-size: 20px;
             color: #ffffff;
             margin-bottom: 10px;
+        }
+        p{
+            font-size: 13px;
         }
 }
 }
@@ -413,7 +425,7 @@
         font-size: 16PX;
         color: #CBCBCB;
         font-weight: 100;
-        text-align: justify;
+        text-align: left;
     }
 }
 @include media-breakpoint-down(md) {
@@ -435,7 +447,7 @@
             font-size: 13px;
             color: #CBCBCB;
             font-weight: 100;
-            text-align: justify;
+            text-align: left;
         }
         .col-md-3{
             margin-bottom: 20px;
