--- a/src/app/components/projects/social-review/social-review.component.scss
+++ b/src/app/components/projects/social-review/social-review.component.scss
@@ -35,7 +35,7 @@
     }
     img{
         width: 125%;
-        height: 450px;
+        height: auto;
     }
 }
 
@@ -178,8 +178,9 @@
             margin-left: 0px;
         }
         .col-sm-3{
-            width: 40%;
-            padding-left: 35px;
+            //width: 40%;
+            padding-left: 40px;
+            padding-bottom: 20px;
         }
     }
 }
