--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -3,7 +3,7 @@
       <div class="searvice-jumbotron-inner">
           <div class="row">
               <div class="col-md-5">
-                  <h5><span class="highlight"> Back-End</span> Development</h5>
+                  <h5><span class="highlight"> End to End</span> Development</h5>
                   <p>Designing scalable platform harnessing the technology for business reach to their end users with the better user experience, engagement and adaptablity.</p>
                       <h3><img src="/assets/images/services/Group 2858.png" alt="" /><span class="list1">Understanding System</span></h3>
                       <h3><img src="/assets/images/services/Group 3029.png" alt="" /><span class="list2">Defining Tech Stack</span></h3>
@@ -123,7 +123,7 @@
            <div class="text">
              <h5>Web Development</h5>
             <p>The portal was designed for a conglomerate with Global Operations to showcase their portfolio of works; the portal with rich UI for statistical and graphical representation used predominantly by Sales Team for proposal initiative.
-            The portal demands for an aesthetic interface with a robust back-end framework to hold the statistical information.</p>
+            The portal demands for an aesthetic interface with a robust end-to-end framework to hold the statistical information.</p>
           <a routerLink="/projects/web-development"><h3>View Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
          </div>
         </div>
@@ -143,7 +143,7 @@
       <div class="service-body">
           <div class="row">
             <div class="col-md-4">
-              <div class="service" routerLink="/services/front-end-dev">
+              <div class="service" routerLink="/services/usability-testing">
                   <div class="service-icon">
                     <img src="/assets/images/services/Group 2760.png" alt="Usablity Testing"/>
                     <img src="/assets/images/services/Group 3373.png" alt="Usablity Testing"/>
@@ -154,23 +154,23 @@
                 </div>
           </div>
           <div class="col-md-4">
-              <div class="service" href="https://uxmint.in/">
-                  <div class="service-icon">
-                    <img src="/assets/images/services/Group 2770.png" alt="Training"/>
-                    <img src="/assets/images/services/Group 3369.png" alt="Training"/>
-                  </div>
-                  <h4>Training</h4>
-                  <p>Transform your workforce with cheery picked courses making them business focused and future ready</p>
-                  <a class="btn">Show More</a>
-                </div>
+            <div class="service" routerLink="/services/interface-design">
+              <div class="service-icon">
+                <img src="/assets/images/services/Group 2745.png" alt="UI Design"/>
+                <img src="/assets/images/services/Group 3370.png" alt="UI Design"/>
+              </div>
+              <h4>Interface Design</h4>
+              <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI.</p>
+              <a class="btn">Show More</a>
+          </div>
           </div>
               <div class="col-md-4">
-                <div class="service" routerLink="/services/ux-consulting">
+                <div class="service" routerLink="/services/user-experience">
                   <div class="service-icon">
                       <img src="/assets/images/services/Group 2790.png" alt="UX consulting"/>
                       <img src="/assets/images/services/Group 3368.png" alt="UX consulting"/>
                   </div>
-                  <h4>UX Consulting</h4>
+                  <h4>User Experience</h4>
                   <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
                   <a class="btn">Show More</a>
                 </div>
